data/test-runtime/deferred-wechat-29f19db3/logs/runtime-2026-06-12.log
[2026-06-12T12:25:14.304Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:14.306Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:15.421Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:15.422Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:16.526Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:16.527Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:18.643Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
[2026-06-12T12:25:18.643Z] [error] [wechat-reply] E:\我的软件源码\千帆中转机器人\src\wechat-reply-parser.js:29
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (E:\我的软件源码\千帆中转机器人\src\adapters\legacy-wechat-reply-adapter.js:6:5)

Node.js v22.22.0
